--- a/css/Minesweeper2.css
+++ b/css/Minesweeper2.css
@@ -1,18 +1,18 @@
 
 #wrapper div div{
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
+    width: 20px;
+    height: 20px;
+    font-size: 15px;
     text-align: center;
-    line-height: 50px;
+    line-height: 20px;
 }
 #wrapper div div input{
-    background-color: red;
+    background-color: gray;
     position: absolute;
     top: 0;
     left: 0;
-    width: 50px;
-    height: 50px;
+    width: 20px;
+    height: 20px;
     /*opacity: 0.8;*/
 }
 .disappear{
@@ -20,4 +20,7 @@
 }
 .disappearChange{
     opacity: 0;
+}
+.red{
+    background-color: red!important;
 }
